# Learning_Projects

image_processor/: CMakeLists.txt  color.cpp  color.h  filters.h  main.cpp  parser.cpp  parser.h  picture.cpp  picture.h  serialize.cpp  serialize.h  serialize_exceptions.cpp  serialize_exceptions.h
image_processor/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  helper_functions.cpp  helper_functions.h  negative.cpp  negative.h  posterize.cpp  posterize.h  sharpening.cpp  sharpening.h  virtual_filters.cpp  virtual_filters.h
